--- a/View/Report1Page.xaml
+++ b/View/Report1Page.xaml
@@ -7,8 +7,36 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="550"
       Title="Report1Page">
+    <Grid Margin="20">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="10" />
+            <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
 
-    <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="90" />
+            <RowDefinition Height="100" />
+            <RowDefinition Height="100" />
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+
+
+
+        <TextBlock Text="Выберите начало периода"  FontSize="15"
+                   VerticalAlignment="Center" FontWeight="Bold"/>
+
+        <TextBlock Text="Выберите конец периода" Grid.Column="2"  FontSize="15"
+                   VerticalAlignment="Center" FontWeight="Bold"/>
+
+        <DatePicker Name="StartDateDP" Grid.Row="1" Width="200" Height="30" VerticalAlignment="Top" />
+        <DatePicker Name="EndDateDP"  Grid.Row="1" Grid.Column="2" Width="200"  Height="30" VerticalAlignment="Top"/>
+
+        <DataGrid Grid.Row="2" Grid.ColumnSpan="3" Name="PeriodDg">
+
+        </DataGrid>
+
+        <Button Name="AddReport" Width="200" Height="50" Grid.Column="2" Grid.Row="5"
+                Content="Сформировать отчет" FontSize="15" Click="AddReport_Click" />
     </Grid>
 </Page>
